@@ -1,3 +1,10 @@
+2005-10-18  Frank Ch. Eigler  <fche@redhat.com>
+
+	PR 1477.
+	* main.cxx (main): Set PATH and LC_ALL, so
+	* buildrun.cxx (compile_pass, run_pass): ... and ...
+	* translate.cxx (emit_symbol_data): ... don't have to.
+
 2005-10-18  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR 1482 cont'd.
